name:                passport-hs
version:             0.1.0.0
synopsis:            Google OAuth implementation
description:         Google OAuth implementation for Scotty
homepage:            https://github.com/Endi1/passport-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Endi Sukaj
maintainer:          endisukaj@gmail.com
copyright:           2023 Endi Sukaj
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:     Passport.Auth
  other-modules:
                       Passport.Config,
                       Passport.Types,
                       Passport.Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hoauth2,
                       rio,
                       uri-bytestring,
                       aeson,
                       scotty,
                       jwt,
                       http-conduit,
                       transformers,
                       http-types,
                       scotty-cookie,
                       bytestring
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
